# contract4agents

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  VISION.md  pyproject.toml
.github/workflows/: create-draft-release.yml  draft-release-notes.yml  python-package.yml  python-publish.yml  vscode-extension.yml
docs/: index.md  releasing.md
docs/architecture/: parser-internals.md  semantic-model.md  system-design.md  v2-semantic-model.md
docs/compiler/: compiler-outputs.md
docs/decisions/: accepted-decisions.md  open-questions.md
docs/evaluation/: evals-assertions-monitors.md  evals-controls-assurance.md
docs/examples/: demo-agent-teams.md  fake-tools-and-data.md  incident-command-walkthrough.md
docs/implementation/: roadmap.md
docs/language/: contract-language.md
docs/quality/: validation.md
docs/reference/: capability-registry.md  cli.md  eval-language.md  grammar.md  manifest.md  openai-adapter.md  run-contracts.md  run-specs.md  semantic-judge.md  test-fixtures.md  trace-schema.md  visualization.md  vscode-extension.md
docs/research/: agent-sdk-pattern-survey.md
docs/runtime/: context-and-datasources.md
docs/tutorials/: enforcing-business-policy.md  first-contract-project.md  healthcare-safety-pattern.md  trace-and-assure.md  using-contract4agents-with-an-agent-app.md  vendor-payment-safety-pattern.md
editors/vscode/: .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts  python.ts
editors/vscode/syntaxes/: contract4agents-eval.tmLanguage.json  contract4agents.tmLanguage.json
editors/vscode/test/: python.test.mjs  tokenize.mjs  verify-package.mjs
examples/: README.md
examples/incident-command/: README.md  assurance.contract  composition.contract  contract4agents.registry.json  contract4agents.targets.toml  eval-data.json  fixture.json
examples/incident-command/agents/: customer_impact_writer.contract  deploy_analyst.contract  incident_commander.contract  log_investigator.contract  metrics_analyst.contract
examples/incident-command/capabilities/: incident.contract
examples/incident-command/data/: seed.py
examples/incident-command/evals/: incident_command.eval
examples/incident-command/monitors/: incident.monitors.contract
examples/incident-command/types/: incident.contract
examples/incident_command_imports/: __init__.py  _db.py  context.py  deploys.py  harness.py  logs.py  metrics.py  seed.py  status_page.py
examples/market-research-brief/: README.md  assurance.contract  composition.contract  contract4agents.registry.json  contract4agents.targets.toml  eval-data.json  fixture.json
examples/market-research-brief/agents/: competitor_analyst.contract  current_truth_scout.contract  customer_signal_analyst.contract  document_analyst.contract  market_research_lead.contract  report_writer.contract
examples/market-research-brief/capabilities/: market.contract
examples/market-research-brief/data/: seed.py
examples/market-research-brief/evals/: market_research.eval
examples/market-research-brief/monitors/: market.monitors.contract
examples/market-research-brief/types/: market.contract
examples/market_research_brief_imports/: __init__.py  _db.py  citation.py  competitors.py  current_facts.py  documents.py  harness.py  seed.py
examples/multi-lens-research/: README.md  assurance.contract  composition.contract  contract4agents.registry.json  contract4agents.targets.toml  eval-data.json  fixture.json
examples/multi-lens-research/agents/: counterargument_analyst.contract  evidence_mapper.contract  policy_safety_lens_analyst.contract  research_director.contract  synthesis_writer.contract  technical_lens_analyst.contract
examples/multi-lens-research/capabilities/: research.contract
examples/multi-lens-research/data/: seed.py
examples/multi-lens-research/evals/: multi_lens_research.eval
examples/multi-lens-research/monitors/: research.monitors.contract
examples/multi-lens-research/run_specs/: research_run.contract
examples/multi-lens-research/types/: research.contract
examples/multi_lens_research_imports/: __init__.py  _db.py  citation.py  evidence.py  expert_review.py  harness.py  seed.py  sources.py
scripts/: __init__.py  docs_check.py
src/contract4agents/: __init__.py  __main__.py  _datasource_resolution.py  _strict_json.py  assertions.py  ast.py  capability_registry.py  cli.py  composition.py  diagnostics.py  docscheck.py  evaluation.py  guards.py  hosted_tools.py  language_server.py  language_spec.py  monitor.py  output_paths.py  pydantic_interop.py  run_contracts.py  run_specs.py  schema.py  semantics.py  type_refs.py
src/contract4agents/adapter_capabilities/: __init__.py  _openai.py
src/contract4agents/adapters/: __init__.py  _openai.py  _openai_composition.py  _openai_guards.py  (+12 more)
tests/: conftest.py
tests/fixtures/: fixture_runner.py  host_drift_app.py  pydantic_models.py
tests/integration/: test_contract_first_examples.py  test_incident_command.py  test_openai_agent_live.py  test_openai_live.py  test_ops_desk_fixture.py  test_public_examples.py
tests/unit/: test_agent_fixture_runner.py  test_assertions.py  test_assurance.py  test_assurance_bundle_diff.py  test_attempt_assurance.py  test_branch_coverage.py  test_capability_registry.py  test_cli.py  test_codegen.py  test_compiler_artifacts.py  test_control_assessment.py  test_docscheck.py  test_edge_coverage.py  test_eval_campaigns.py  test_expectation_assessment.py  test_expressions.py  test_format_versions.py  test_guards.py  test_ir.py  test_language.py  test_language_server.py  test_language_service.py  test_materialization.py  test_openai_adapter.py  test_openai_names.py  test_openai_response_normalization.py  test_openai_tracing.py  test_parser_golden.py  test_parser_semantics_compiler.py  test_planning.py  test_public_facades.py  test_run_spec_assessment.py  test_runtime_eval_monitor.py  test_semantic_diff.py  test_target_binding_conformance.py  test_target_bindings.py  test_trace_io.py  test_tracing.py  test_tracing_v2.py  test_type_refs.py  (+4 more)
(+202 files in other folders)
