[build-system]
requires = ["pdm-backend>=2.4.9"]
build-backend = "pdm.backend"

[project]
name = "contract4agents"
dynamic = ["version"]
description = "Typed declarative contracts for AI agent systems."
authors = [
    {name = "B.T. Franklin", email = "brandon.franklin@gmail.com"},
]
dependencies = [
    "click>=8.4.1",
    "lark>=1.3.1",
    "jsonschema>=4.26.0",
    "promptdown>=1.1.6",
]
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["agents", "contracts", "evals", "llm", "openai", "tooling"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Topic :: File Formats",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
]

[project.urls]
Homepage = "https://github.com/btfranklin/contract4agents"
Issues = "https://github.com/btfranklin/contract4agents/issues"
Changelog = "https://github.com/btfranklin/contract4agents/releases"
Repository = "https://github.com/btfranklin/contract4agents.git"

[project.scripts]
contract4agents = "contract4agents.cli:main"

[project.optional-dependencies]
openai = [
    "openai>=2.44.0",
    "openai-agents>=0.17.7",
]


[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
package-dir = "src"
excludes = ["examples/**", "tests/**"]

[tool.pdm.scripts]
test = "pytest"
"test:unit" = "pytest tests/unit --cov=contract4agents --cov-report=term-missing --cov-fail-under=90"
"test:integration" = "pytest tests/integration"
"test:openai-live" = "pytest tests/integration/test_openai_live.py"
"test:agent-fixture" = "pytest tests/integration/test_ops_desk_fixture.py"
"test:openai-agent-live" = "pytest tests/integration/test_openai_agent_live.py"
docs-check = "python -m contract4agents docs-check"
lint = "ruff check src tests examples"
typecheck = "mypy src"
validate = {composite = ["lint", "typecheck", "docs-check", "test"]}
contract4agents = "python -m contract4agents"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that may require optional services or credentials",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
files = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
    "mypy>=2.1.0",
    "pytest-asyncio>=1.4.0",
    "types-jsonschema>=4.26.0.20260518",
]
openai = [
    "openai>=2.44.0",
    "openai-agents>=0.17.7",
]
