[build-system]
requires = ["pdm-backend>=2.4.9"]
build-backend = "pdm.backend"

[project]
name = "contract4agents"
dynamic = ["version"]
description = "Typed declarative contracts for AI agent systems."
authors = [
    {name = "B.T. Franklin", email = "brandon.franklin@gmail.com"},
]
dependencies = [
    "click>=8.4.2",
    "lark>=1.3.1",
    "jsonschema>=4.26.0",
    "pydantic>=2.13.4",
    "pygls>=2.1.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["agents", "contracts", "evals", "llm", "openai", "tooling"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Topic :: File Formats",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
]

[project.urls]
Homepage = "https://github.com/btfranklin/contract4agents"
Issues = "https://github.com/btfranklin/contract4agents/issues"
Changelog = "https://github.com/btfranklin/contract4agents/releases"
Repository = "https://github.com/btfranklin/contract4agents.git"

[project.scripts]
contract4agents = "contract4agents.cli:main"
contract4agents-language-server = "contract4agents.language_server:main"

[project.optional-dependencies]
openai = [
    "openai>=2.44.0",
    "openai-agents>=0.17.7",
]


[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
package-dir = "src"
excludes = ["editors/**", "examples/**", "tests/**"]

[tool.pdm.scripts]
test = "pytest"
"test:unit" = "pytest tests/unit --cov=contract4agents --cov-report=term-missing --cov-fail-under=90"
"test:integration" = "pytest tests/integration"
"test:openai-live" = "pytest -m live tests/integration/test_openai_live.py"
"test:editor" = "npm --prefix editors/vscode test"
docs-check = "python scripts/docs_check.py"
lint = "ruff check src tests examples"
typecheck = "mypy src"
"validate:python" = {composite = ["lint", "typecheck", "docs-check", "test:unit", "test:integration"]}
validate = {composite = ["validate:python", "test:editor"]}
"smoke:cli" = {composite = [
    "contract4agents --help",
    "contract4agents check examples/incident-command",
    "contract4agents plan examples/incident-command --target openai --profile test --out .contract/build/incident-command/plan.json",
    "contract4agents compile examples/incident-command --out .contract/build/incident-command",
    "contract4agents generate examples/incident-command --target python --out .contract/build/incident-command/generated",
    "contract4agents visualize examples/incident-command --target openai --profile test --out .contract/build/incident-command/visualization",
    "contract4agents eval examples/incident-command --target openai --profile test --out .contract/build/incident-command/eval-results.json",
    "contract4agents assure examples/incident-command --target openai --profile test --eval-results .contract/build/incident-command/eval-results.json --out .contract/build/incident-command/assurance",
    "contract4agents diff examples/incident-command examples/incident-command --out .contract/build/incident-command/diff.json",
    "contract4agents check examples/multi-lens-research",
    "contract4agents plan examples/multi-lens-research --target openai --profile test --out .contract/build/multi-lens-research/plan.json",
    "contract4agents compile examples/multi-lens-research --out .contract/build/multi-lens-research",
    "contract4agents visualize examples/multi-lens-research --target openai --profile test --out .contract/build/multi-lens-research/visualization",
    "contract4agents eval examples/multi-lens-research --target openai --profile test --out .contract/build/multi-lens-research/eval-results.json",
    "contract4agents check examples/market-research-brief",
    "contract4agents plan examples/market-research-brief --target openai --profile test --out .contract/build/market-research-brief/plan.json",
    "contract4agents compile examples/market-research-brief --out .contract/build/market-research-brief",
    "contract4agents visualize examples/market-research-brief --target openai --profile test --out .contract/build/market-research-brief/visualization",
    "contract4agents eval examples/market-research-brief --target openai --profile test --out .contract/build/market-research-brief/eval-results.json",
]}
contract4agents = "python -m contract4agents"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that may require optional services or credentials",
    "live: opt-in tests that call provider APIs",
]

[tool.coverage.run]
patch = ["subprocess"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
files = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
    "mypy>=2.1.0",
    "pytest-asyncio>=1.4.0",
    "types-jsonschema>=4.26.0.20260518",
]
